--- a/pypy-for-HPC/PyPy for High Performance Computing.ipynb
+++ b/pypy-for-HPC/PyPy for High Performance Computing.ipynb
@@ -79,22 +79,105 @@
     }
    },
    "source": [
-    "<img width=\"100%\" src=\"tracing-phases.svg\" />"
+    "* Ok, but why?"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Python **real** strong points\n",
+    "\n",
+    "* Expressive APIs\n",
+    "* Abstractions\n"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# Example: JSON"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "center",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "```java\n",
+    "// googled for \"getJSONArray example\", found this:\n",
+    "// https://stackoverflow.com/questions/32624166/how-to-get-json-array-within-json-object\n",
+    "\n",
+    "JSONObject jsonObj = new JSONObject(jsonString);\n",
+    "\n",
+    "JSONArray jArray = jsonObj.getJSONArray(\"data\");\n",
+    "int length = jArray.length();\n",
+    "for(int i=0; i<length; i++) {\n",
+    "    JSONObject jObj = jArray.getJSONObject(i);\n",
+    "    String id = jObj.optString(\"id\");\n",
+    "    String name=jObj.optString(\"name\");\n",
+    "\n",
+    "    JSONArray ingredientArray = jObj.getJSONArray(\"Ingredients\");\n",
+    "    int size = ingredientArray.length();\n",
+    "    ArrayList<String> Ingredients = new ArrayList<>();\n",
+    "\n",
+    "    for(int j=0; j<size; j++) {\n",
+    "        JSONObject json = ja.getJSONObject(j);\n",
+    "        Ingredients.add(json.optString(\"name\"));\n",
+    "    }\n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "center",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "```python\n",
+    "obj = json.loads(string)\n",
+    "for item in obj['data']:\n",
+    "    id = item['id']\n",
+    "    name = item['name']\n",
+    "    ingredients = []\n",
+    "    for ingr in item[\"ingredients\"]:\n",
+    "        ingredients.append(ingr['name'])\n",
+    "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# So far so good, BUT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<img width=\"100%\" src=\"tracing-phases.svg\" />"
+   ]
   }
  ],
  "metadata": {
