--- a/pypy-for-HPC/PyPy for High Performance Computing.ipynb
+++ b/pypy-for-HPC/PyPy for High Performance Computing.ipynb
@@ -15,7 +15,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -38,7 +38,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -49,7 +49,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -90,17 +90,18 @@
     }
    },
    "source": [
-    "# Python **real** strong points\n",
+    "# Python *REAL* strong points\n",
     "\n",
-    "* Expressive APIs\n",
-    "* Abstractions\n"
+    "* Expressive & simple APIs\n",
+    "* Uniform typesystem (everything is an object)\n",
+    "* Powerful abstractions\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -112,14 +113,11 @@
    "metadata": {
     "cell_style": "center",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
     "```java\n",
-    "// googled for \"getJSONArray example\", found this:\n",
-    "// https://stackoverflow.com/questions/32624166/how-to-get-json-array-within-json-object\n",
-    "\n",
     "JSONObject jsonObj = new JSONObject(jsonString);\n",
     "\n",
     "JSONArray jArray = jsonObj.getJSONArray(\"data\");\n",
@@ -138,6 +136,10 @@
     "        Ingredients.add(json.optString(\"name\"));\n",
     "    }\n",
     "}\n",
+    "\n",
+    "// googled for \"getJSONArray example\", found this:\n",
+    "// https://stackoverflow.com/questions/32624166/how-to-get-json-array-within-json-object\n",
+    "\n",
     "```"
    ]
   },
@@ -146,7 +148,7 @@
    "metadata": {
     "cell_style": "center",
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -174,10 +176,479 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<center><img src=\"abstractions.svg.png\" width=\"50%\" /></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Example of temporary objects\n",
+    "## Bound methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "class A(object):\n",
+    "    def foo(self):\n",
+    "        return 42\n",
+    "\n",
+    "a = A()\n",
+    "bound_foo = a.foo\n",
+    "%timeit a.foo()\n",
+    "%timeit bound_foo()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Ideally\n",
+    "### Think of concepts, not implementation details\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "# Real world\n",
+    "### Details leak to the user"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "# CPython problem\n",
+    "### Tension between abstractions and performance"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Classical Python approaches to performance problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 1. Work around in the user code\n",
+    "### e.g. create bound methods beforehand"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 2. Work around in the language specs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* range vs xrange\n",
+    "* dict.keys vs .iterkeys \n",
+    "* int vs long\n",
+    "* array.array vs list"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Easier to implement\n",
+    "* Harder to use\n",
+    "* Clutter the language unnecessarily\n",
+    "* More complex to understand\n",
+    "* Not really Pythonic"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 3. Stay in C as much as possible\n",
+    "\n",
+    "* map + operator.* instead of plain simple python\n",
+    "\n",
+    "XXX find some numpy example\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import operator\n",
+    "import functools\n",
+    "import itertools\n",
+    "\n",
+    "numbers = range(100000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 loops, best of 3: 9.12 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "% timeit doubles = map(functools.partial(operator.mul, 2), numbers)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100 loops, best of 3: 5.18 ms per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%timeit [n*2 for n in numbers]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# 4. Rewrite in C\n",
+    "\n",
+    "* #include \"Python.h\"\n",
+    "* Cython\n",
+    "* CFFI\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "### Python as a glue-only language"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "<img src=\"images/90-10-rule-1.svg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"images/90-10-rule-2.svg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "center",
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Tradeoff between speed and code quality"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Welcome, PyPy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Alternative Python implementation\n",
+    "* Ideally: no visible difference to the user\n",
+    "* JIT compiler"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# How fast is PyPy?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "### Wrong question"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Up to 80x faster in extreme cases\n",
+    "* 10x faster in good cases\n",
+    "* 2x faster on \"random\" code\n",
+    "* sometime it's just slower "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# PyPy flaws"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Far from being perfect\n",
+    "* it leaks *other* implementation details than CPython\n",
+    "  - e.g. JIT warmup, GC pecularities\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# PyPy qualities"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "### Make pythonic, idiomatic code fast"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "### Abstractions are (almost) free\n",
+    "\n",
+    "#### The better the code, the biggest the speedup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Example: Sobel filter\n",
+    "\n",
+    "* for full explanation: link to my EP2017 talk"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# The *BIG* problem: C extensions\n",
+    "(WIP)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<img width=\"100%\" src=\"tracing-phases.svg\" />"
+    "XXX show diagram of cpyext slowness"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Current status\n",
+    "\n",
+    "* Most C extensions just work: numpy, scipy, pandas, etc.\n",
+    "* Slow :("
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# We are working on it"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "# Future status (hopefully)\n",
+    "* All C extensions will just work\n",
+    "* C code as fast as today, Python code super-fast\n",
+    "* The best of both worlds\n",
+    "* PyPy as the default choice for HPC\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "\n",
+    "My personal estimate: 6 months of work and we have a fast cpyext\n",
+    "\n",
+    "(let's talk about money :))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -197,7 +668,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.14"
+   "version": "2.7.12"
   }
  },
  "nbformat": 4,
