--- a/pypy-for-HPC/PyPy for High Performance Computing.ipynb
+++ b/pypy-for-HPC/PyPy for High Performance Computing.ipynb
@@ -182,7 +182,7 @@
     }
    },
    "source": [
-    "<center><img src=\"abstractions.svg.png\" width=\"50%\" /></center>"
+    "<center><img src=\"images/abstractions.svg.png\" width=\"50%\" /></center>"
    ]
   },
   {
@@ -409,9 +409,39 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "cell_style": "split",
+    "cell_style": "center",
     "slideshow": {
      "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Tradeoff between speed and code quality"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# \"Rewrite in C\" approach"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "XXX: put the abstraction diagram instead of the big blue box"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -428,18 +458,6 @@
    },
    "source": [
     "<img src=\"images/90-10-rule-2.svg\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_style": "center",
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Tradeoff between speed and code quality"
    ]
   },
   {
@@ -559,6 +577,18 @@
     "### Abstractions are (almost) free\n",
     "\n",
     "#### The better the code, the biggest the speedup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "## Python as a first class language\n",
+    "## No longer limited to be a glue"
    ]
   },
   {
