more slides and diagrams

--- a/pypy-for-HPC/PyPy for High Performance Computing.ipynb
+++ b/pypy-for-HPC/PyPy for High Performance Computing.ipynb
@@ -182,7 +182,7 @@
     }
    },
    "source": [
-    "<center><img src=\"images/abstractions.svg.png\" width=\"50%\" /></center>"
+    "<center><img src=\"images/abstractions.svg\" width=\"50%\" /></center>"
    ]
   },
   {
@@ -390,9 +390,66 @@
    "source": [
     "# 4. Rewrite in C\n",
     "\n",
-    "* #include \"Python.h\"\n",
+    "* `#include \"Python.h\"`\n",
     "* Cython\n",
     "* CFFI\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# \"Rewrite in C\" approach\n",
+    "## aka, 90/10 rule"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "center",
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<img src=\"images/90-10-rule-1.svg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<img src=\"images/90-10-rule-2.svg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<img src=\"images/90-10-rule-3.svg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# (C)Python in the HPC world"
    ]
   },
   {
@@ -403,7 +460,7 @@
     }
    },
    "source": [
-    "### Python as a glue-only language"
+    "# Python as a glue-only language"
    ]
   },
   {
@@ -411,7 +468,7 @@
    "metadata": {
     "cell_style": "center",
     "slideshow": {
-     "slide_type": "slide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -426,49 +483,7 @@
     }
    },
    "source": [
-    "# \"Rewrite in C\" approach"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "XXX: put the abstraction diagram instead of the big blue box"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_style": "split",
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "<img src=\"images/90-10-rule-1.svg\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "cell_style": "split",
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "<img src=\"images/90-10-rule-2.svg\">"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "slide"
-    }
-   },
-   "source": [
-    "# Welcome, PyPy"
+    "# PyPy"
    ]
   },
   {
@@ -481,7 +496,8 @@
    "source": [
     "* Alternative Python implementation\n",
     "* Ideally: no visible difference to the user\n",
-    "* JIT compiler"
+    "* JIT compiler\n",
+    "* http://pypy.org"
    ]
   },
   {
@@ -563,7 +579,7 @@
     }
    },
    "source": [
-    "### Make pythonic, idiomatic code fast"
+    "## Make pythonic, idiomatic code fast"
    ]
   },
   {
@@ -574,16 +590,16 @@
     }
    },
    "source": [
-    "### Abstractions are (almost) free\n",
+    "## Abstractions are (almost) free\n",
     "\n",
-    "#### The better the code, the biggest the speedup"
+    "## The better the code, the biggest the speedup"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
@@ -620,17 +636,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "XXX show diagram of cpyext slowness"
+    "# Current status\n",
+    "\n",
+    "* Most C extensions just work: numpy, scipy, pandas, etc.\n",
+    "* Slow :("
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Current status\n",
-    "\n",
-    "* Most C extensions just work: numpy, scipy, pandas, etc.\n",
-    "* Slow :("
+    "XXX show diagram of cpyext slowness"
    ]
   },
   {
