one more diagram, more slides

--- a/pypy-for-HPC/PyPy for High Performance Computing.ipynb
+++ b/pypy-for-HPC/PyPy for High Performance Computing.ipynb
@@ -245,11 +245,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "slide"
     }
    },
    "source": [
-    "# CPython problem\n",
+    "# Python problem\n",
     "### Tension between abstractions and performance"
    ]
   },
@@ -261,7 +261,7 @@
     }
    },
    "source": [
-    "# Classical Python approaches to performance problems"
+    "# Classical Python approaches to performance"
    ]
   },
   {
@@ -335,49 +335,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
     "import operator\n",
     "import functools\n",
     "import itertools\n",
+    "import numpy as np\n",
     "\n",
-    "numbers = range(100000)\n"
+    "#numbers = np.random.random(1000)\n",
+    "numbers = range(1000, 2000)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 loops, best of 3: 9.12 ms per loop\n"
+      "The slowest run took 8.65 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "10000 loops, best of 3: 47.3 µs per loop\n"
      ]
     }
    ],
    "source": [
-    "% timeit doubles = map(functools.partial(operator.mul, 2), numbers)"
+    "#% timeit doubles = map(functools.partial(operator.mul, 2), numbers)\n",
+    "% timeit [x*2 for x in numbers]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100 loops, best of 3: 5.18 ms per loop\n"
+      "The slowest run took 49.95 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "10000 loops, best of 3: 42.5 µs per loop\n"
      ]
     }
    ],
    "source": [
-    "%timeit [n*2 for n in numbers]"
+    "%timeit np.array(numbers)*2"
    ]
   },
   {
@@ -410,7 +415,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "cell_style": "center",
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "subslide"
     }
@@ -422,8 +427,9 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "fragment"
     }
    },
    "source": [
@@ -433,12 +439,27 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "cell_style": "split",
     "slideshow": {
      "slide_type": "subslide"
     }
    },
    "source": [
     "<img src=\"images/90-10-rule-3.svg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "* Abstractions cost\n",
+    "* Code quality => poor performance\n",
+    "* Python parts become relevant"
    ]
   },
   {
@@ -575,24 +596,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "## Make pythonic, idiomatic code fast"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "slideshow": {
-     "slide_type": "fragment"
-    }
-   },
-   "source": [
-    "## Abstractions are (almost) free\n",
-    "\n",
-    "## The better the code, the biggest the speedup"
+    "# Make pythonic, idiomatic code fast"
    ]
   },
   {
@@ -603,8 +611,55 @@
     }
    },
    "source": [
-    "## Python as a first class language\n",
-    "## No longer limited to be a glue"
+    "# Abstractions are (almost) free\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "# The better the code, the biggest the speedup"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<img src=\"images/90-10-rule-1.svg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"images/90-10-rule-pypy.svg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Python as a first class language\n",
+    "# No longer \"just glue\""
    ]
   },
   {
