more diagrams, finish the slides

--- a/pypy-for-HPC/PyPy for High Performance Computing.ipynb
+++ b/pypy-for-HPC/PyPy for High Performance Computing.ipynb
@@ -19,8 +19,13 @@
     }
    },
    "source": [
-    "## Short bio\n",
-    "bla bla bla"
+    "# Short bio\n",
+    "\n",
+    "* PyPy core dev since 2006\n",
+    "* pdb++, CFFI, vmprof, capnpy, ...\n",
+    "* @antocuni\n",
+    "* https://github.com/antocuni\n",
+    "* https://bitbucket.org/antocuni"
    ]
   },
   {
@@ -326,63 +331,46 @@
     }
    },
    "source": [
-    "# 3. Stay in C as much as possible\n",
-    "\n",
-    "* map + operator.* instead of plain simple python\n",
-    "\n",
-    "XXX find some numpy example\n"
+    "# 3. Stay in C as much as possible"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import operator\n",
-    "import functools\n",
-    "import itertools\n",
-    "import numpy as np\n",
-    "\n",
-    "#numbers = np.random.random(1000)\n",
-    "numbers = range(1000, 2000)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 8.65 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "10000 loops, best of 3: 47.3 µs per loop\n"
+      "10000 loops, best of 3: 47.1 µs per loop\n"
      ]
     }
    ],
    "source": [
-    "#% timeit doubles = map(functools.partial(operator.mul, 2), numbers)\n",
+    "numbers = range(1000)\n",
     "% timeit [x*2 for x in numbers]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 49.95 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "10000 loops, best of 3: 42.5 µs per loop\n"
+      "The slowest run took 17.59 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "1000000 loops, best of 3: 1.48 µs per loop\n"
      ]
     }
    ],
    "source": [
-    "%timeit np.array(numbers)*2"
+    "import numpy as np\n",
+    "\n",
+    "numbers = np.arange(1000)\n",
+    "% timeit numbers*2"
    ]
   },
   {
@@ -470,7 +458,7 @@
     }
    },
    "source": [
-    "# (C)Python in the HPC world"
+    "# Python in the HPC world"
    ]
   },
   {
@@ -672,7 +660,11 @@
    "source": [
     "# Example: Sobel filter\n",
     "\n",
-    "* for full explanation: link to my EP2017 talk"
+    "* Extendend version\n",
+    "  - \"The Joy of PyPy: Abstractions for Free\", EP 2017\n",
+    "\n",
+    "* https://speakerdeck.com/antocuni/the-joy-of-pypy-jit-abstractions-for-free\n",
+    "* https://www.youtube.com/watch?v=NQfpHQII2cU"
    ]
   },
   {
@@ -683,25 +675,50 @@
     }
    },
    "source": [
-    "# The *BIG* problem: C extensions\n",
-    "(WIP)"
+    "# The *BIG* problem: C extensions"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
    "source": [
-    "# Current status\n",
+    "## CPython\n",
+    "<img src=\"images/calling-C-cpython.svg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "## PyPy (cpyext)\n",
+    "<img src=\"images/calling-C-cpyext.svg\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# cpyext\n",
     "\n",
+    "* PyPy version of `Python.h`\n",
+    "* Compatibility layer\n",
     "* Most C extensions just work: numpy, scipy, pandas, etc.\n",
-    "* Slow :("
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "XXX show diagram of cpyext slowness"
+    "* Slow :(\n",
+    "* Use CFFI whenever it's possible"
    ]
   },
   {
@@ -745,11 +762,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# That's all\n",
+    "## Questions?"
+   ]
   }
  ],
  "metadata": {
