add some images and embed sobel charts

--- a/pypy-for-HPC/PyPy for High Performance Computing.ipynb
+++ b/pypy-for-HPC/PyPy for High Performance Computing.ipynb
@@ -80,11 +80,11 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "fragment"
+     "slide_type": "subslide"
     }
    },
    "source": [
-    "* Ok, but why?"
+    "<img src=\"images/ken-treloar-346065-unsplash.jpg\" />"
    ]
   },
   {
@@ -188,6 +188,17 @@
    },
    "source": [
     "<center><img src=\"images/abstractions.svg\" width=\"50%\" /></center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "subslide"
+    }
+   },
+   "source": [
+    "<center><img src=\"images/toy-story.jpg\" width=\"100%\" /></center>"
    ]
   },
   {
@@ -670,6 +681,41 @@
   {
    "cell_type": "markdown",
    "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"images/sobel-cpython.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "cell_style": "split",
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "<img src=\"images/sobel-pypy.png\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "fragment"
+    }
+   },
+   "source": [
+    "# 59x --> 428x faster"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
     "slideshow": {
      "slide_type": "slide"
     }
@@ -791,7 +837,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.12"
+   "version": "2.7.14"
   }
  },
  "nbformat": 4,
