add credits, add one more example of py vs C

--- a/pypy-for-HPC/PyPy for High Performance Computing.ipynb
+++ b/pypy-for-HPC/PyPy for High Performance Computing.ipynb
@@ -84,7 +84,9 @@
     }
    },
    "source": [
-    "<img src=\"images/ken-treloar-346065-unsplash.jpg\" />"
+    "<img src=\"images/ken-treloar-346065-unsplash.jpg\" />\n",
+    "\n",
+    "<div align=\"right\"><small>Photo by <a href=\"https://unsplash.com/photos/yjePAp-tpmQ\">Ken Treloar</a> on <a href=\"https://unsplash.com/\">Unsplash</a></small></div>"
    ]
   },
   {
@@ -347,14 +349,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10000 loops, best of 3: 47.1 µs per loop\n"
+      "The slowest run took 11.03 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "10000 loops, best of 3: 52 µs per loop\n"
      ]
     }
    ],
@@ -365,15 +368,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The slowest run took 17.59 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
-      "1000000 loops, best of 3: 1.48 µs per loop\n"
+      "The slowest run took 428.56 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "100000 loops, best of 3: 2.53 µs per loop\n"
      ]
     }
    ],
@@ -382,6 +385,46 @@
     "\n",
     "numbers = np.arange(1000)\n",
     "% timeit numbers*2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 11.39 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "10000 loops, best of 3: 36.9 µs per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%timeit numbers = range(1000)\n",
+    "tot = 0\n",
+    "for n in numbers:\n",
+    "    tot += n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The slowest run took 4.58 times longer than the fastest. This could mean that an intermediate result is being cached.\n",
+      "100000 loops, best of 3: 6.14 µs per loop\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = range(1000)\n",
+    "% timeit total = sum(numbers)"
    ]
   },
   {
